--- a/#src/css/customs-posts.css
+++ b/#src/css/customs-posts.css
@@ -8,7 +8,6 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -37,6 +36,11 @@ body {
   font-size: 16px;
 }
 
+body,
+html {
+  min-height: 100%;
+}
+
 main {
   padding-top: 5.25rem;
 }
@@ -50,11 +54,9 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-
 body.lock {
   overflow: hidden;
 }
-
 @media (max-width: 767.98px) {
   body.lock {
     width: 100%;
@@ -76,9 +78,9 @@ input::-ms-clear {
   display: none;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="tel"],
+input[type=text],
+input[type=email],
+input[type=tel],
 textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -148,22 +150,18 @@ h6 {
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
 @media (max-width: 1212px) {
   .container {
     max-width: 970px;
   }
 }
-
 @media (max-width: 992.98px) {
   .container {
     max-width: 750px;
   }
 }
-
 @media (max-width: 767.98px) {
   .container {
     max-width: none;
@@ -178,7 +176,6 @@ p {
   font-weight: 300;
   letter-spacing: 0.03rem;
 }
-
 @media all and (max-width: 767px) {
   p {
     line-height: 150%;
@@ -192,7 +189,6 @@ p {
   letter-spacing: normal;
   color: #095f71;
 }
-
 @media all and (max-width: 1023px) {
   .text {
     font-size: 0.8rem;
@@ -208,7 +204,6 @@ p {
 .desktop {
   display: block;
 }
-
 @media all and (max-width: 767px) {
   .desktop {
     display: none;
@@ -218,7 +213,6 @@ p {
 .mobile {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .mobile {
     display: block;
@@ -228,7 +222,6 @@ p {
 .hide-sm {
   display: block;
 }
-
 @media all and (max-width: 767px) {
   .hide-sm {
     display: none;
@@ -236,34 +229,24 @@ p {
 }
 
 .socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .socials__item {
   margin-left: 0.9rem;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 @media all and (max-width: 767px) {
   .socials__item {
     margin-left: 0;
   }
 }
-
 .socials__item:first-child {
   margin-left: 0rem;
 }
-
 .socials__item:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-  -webkit-transition: 0.3s;
+  transform: scale(1.08);
   transition: 0.3s;
 }
-
 .socials__link:before {
   display: block;
   content: " ";
@@ -271,35 +254,27 @@ p {
   height: 2rem;
   width: 2rem;
 }
-
 .socials__link--facebook::before {
   background-image: url("../img/facebook.svg");
 }
-
 .socials__link--youtube::before {
   background-image: url("../img/youtube.svg");
 }
-
 .socials__link--inst::before {
   background-image: url("../img/instagram.svg");
 }
-
 .socials__link--twitter::before {
   background-image: url("../img/twitter.svg");
 }
-
 .socials__link--google-plus::before {
   background-image: url("../img/g-plus.svg");
 }
-
 .socials__link--telegram-color::before {
   background-image: url("../img/telegram-color.svg");
 }
-
 .socials__link--whatsup-color::before {
   background-image: url("../img/whatsup-color.svg");
 }
-
 .socials__link--viber-color::before {
   background-image: url("../img/viber-color.svg");
 }
@@ -317,53 +292,36 @@ p {
 
 .btn {
   height: 42px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  align-items: center;
+  justify-content: center;
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   color: #ffffff;
   font-weight: 600;
   font-size: 1rem;
   line-height: 115%;
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
   position: relative;
   cursor: pointer;
   padding: 12px 5px;
 }
-
 .btn--orange {
-  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
   background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
 }
-
 .btn:hover {
-  -webkit-filter: drop-shadow(0px 0px 10px #EC3737);
-          filter: drop-shadow(0px 0px 10px #EC3737);
-  -webkit-transition: 0.3s all;
+  box-shadow: 0px 0px 10px #EC3737;
   transition: 0.3s all;
 }
-
 .btn:active, .btn:focus {
-  -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
-          box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
 }
-
 @media all and (max-width: 1023px) {
   .btn {
     height: 38px;
     font-size: 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .btn {
     font-size: 0.75rem;
@@ -373,62 +331,46 @@ p {
 }
 
 .btn-link {
+  font-family: "Manrope", sans-serif;
   height: 73px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: #f0f8f7;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   color: #095f71;
   font-weight: 600;
   font-size: 1.125rem;
   line-height: 115%;
   padding: 0 35px 0 15px;
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
   position: relative;
 }
-
 .btn-link--orange {
-  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
   background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-  -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
-          filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
 }
-
 .btn-link:hover {
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
-  -webkit-box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
-          box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
+  box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
 }
-
 .btn-link::after {
   content: "";
   position: absolute;
   right: 1rem;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   display: block;
   width: 1.125rem;
   height: 1.125rem;
   background: url("../img/customs/chevron-right.svg") center/contain no-repeat;
 }
-
 @media all and (max-width: 1023px) {
   .btn-link::after {
     right: 0.5rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .btn-link {
     font-size: 0.8rem;
@@ -441,7 +383,6 @@ p {
 .img-sm {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .img-sm {
     display: block;
@@ -455,20 +396,17 @@ p {
   min-height: 30rem;
   padding: 4.625rem 0 1rem;
 }
-
 @media all and (max-width: 1280px) {
   .company {
     background: url("../img/customs/posts_bg.jpg") no-repeat right 40% center/cover;
   }
 }
-
 @media all and (max-width: 1023px) {
   .company {
     background: url("../img/customs/posts_bg.jpg") no-repeat right 30% center/cover;
     padding: 2.625rem 0 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .company {
     background: url("../img/customs/mob_bg.jpg") no-repeat center top/cover;
@@ -476,23 +414,19 @@ p {
     height: auto;
   }
 }
-
 .company__content {
   max-width: 42.5rem;
 }
-
 @media all and (max-width: 1023px) {
   .company__content {
     max-width: 29.5rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .company__content {
     max-width: 21.2rem;
   }
 }
-
 .company__title {
   font-size: 3rem;
   font-weight: 800;
@@ -501,33 +435,28 @@ p {
   line-height: 120%;
   margin-bottom: 2rem;
 }
-
 @media all and (max-width: 1023px) {
   .company__title {
     font-size: 2rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .company__title {
     font-size: 1.1rem;
     margin-bottom: 1rem;
   }
 }
-
 .company__text {
   font-size: 1.125rem;
   color: #095f71;
   line-height: 156%;
   font-weight: 500;
 }
-
 @media all and (max-width: 1023px) {
   .company__text {
     font-size: 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .company__text {
     font-size: 0.8rem;
@@ -539,84 +468,61 @@ p {
   padding: 3.25rem 0;
   background: #0a7991;
 }
-
 @media all and (max-width: 767px) {
   .services {
     padding: 0;
   }
 }
-
 .services__split-bg {
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #FFf), color-stop(50%, #0a7991));
   background: linear-gradient(to right, #FFf 50%, #0a7991 50%);
   padding: 2.5rem 0;
 }
-
 @media all and (max-width: 767px) {
   .services__split-bg {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(57%, #FFf), color-stop(43%, #0a7991));
     background: linear-gradient(to bottom, #FFf 57%, #0a7991 43%);
   }
 }
-
 .services__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
-
 @media all and (max-width: 767px) {
   .services__content {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 .services__text-wrap {
   max-width: 30rem;
 }
-
 @media all and (max-width: 1280px) {
   .services__text-wrap {
     margin-left: 9rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .services__text-wrap {
     margin-left: 0;
     margin-top: 2rem;
   }
 }
-
 .services__text {
   color: #f0f8f7;
   font-size: 1.125rem;
   font-weight: 500;
   line-height: 156%;
 }
-
 @media all and (max-width: 767px) {
   .services__text {
     font-size: 0.8rem;
     line-height: 185%;
   }
 }
-
 @media all and (max-width: 1023px) {
   .services__img {
     width: 40%;
   }
 }
-
 @media all and (max-width: 767px) {
   .services__img {
     width: 265px;
@@ -626,18 +532,15 @@ p {
 .list-posts {
   padding: 3.2rem 0 2.5rem;
 }
-
 @media all and (max-width: 767px) {
   .list-posts {
     padding: 1.6rem 0 2.5rem;
   }
 }
-
 .list-posts__main-wrap {
   max-width: 980px;
   margin: 0 auto;
 }
-
 .list-posts__title {
   font-size: 1.375rem;
   font-weight: 700;
@@ -645,65 +548,40 @@ p {
   max-width: 30rem;
   line-height: 127%;
 }
-
 @media all and (max-width: 767px) {
   .list-posts__title {
     font-size: 1rem;
     margin-bottom: 1rem;
   }
 }
-
 .list-posts__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: flex-end;
+  justify-content: space-between;
   margin: 4.25rem 0 2.5rem;
 }
-
 @media all and (max-width: 767px) {
   .list-posts__wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     margin: 0 0 2rem;
   }
 }
-
 .list-posts__col {
   width: 30%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
-
 @media all and (max-width: 767px) {
   .list-posts__col {
     width: 100%;
   }
 }
-
 .list-posts__select {
   color: #0a7991;
   padding: 1rem 2rem;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   width: 280px;
   margin-top: 2.5rem;
@@ -711,7 +589,6 @@ p {
   font-weight: 600;
   -webkit-appearance: none;
   -moz-appearance: none;
-  -ms-appearance: none;
   appearance: none;
   background: #f0f8f7 url("../img/customs/arrow-down.svg") no-repeat right 1rem center;
   outline: 0;
@@ -719,29 +596,24 @@ p {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 @media all and (max-width: 1023px) {
   .list-posts__select {
     width: 100%;
   }
 }
-
 @media all and (max-width: 767px) {
   .list-posts__select {
     margin-top: 1rem;
     font-size: 1rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .list-posts__img {
     width: 100%;
   }
 }
-
 @media all and (max-width: 767px) {
   .list-posts__icon {
     display: none;
   }
-}
-/*# sourceMappingURL=customs-posts.css.map */
+}/*# sourceMappingURL=customs-posts.css.map */
