--- a/css/articles.css
+++ b/css/articles.css
@@ -8,7 +8,6 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -55,11 +54,9 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-
 body.lock {
   overflow: hidden;
 }
-
 @media (max-width: 767.98px) {
   body.lock {
     width: 100%;
@@ -81,9 +78,9 @@ input::-ms-clear {
   display: none;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="tel"],
+input[type=text],
+input[type=email],
+input[type=tel],
 textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -153,22 +150,18 @@ h6 {
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
 @media (max-width: 1212px) {
   .container {
     max-width: 970px;
   }
 }
-
 @media (max-width: 992.98px) {
   .container {
     max-width: 750px;
   }
 }
-
 @media (max-width: 767.98px) {
   .container {
     max-width: none;
@@ -183,7 +176,6 @@ p {
   font-weight: 300;
   letter-spacing: 0.03rem;
 }
-
 @media all and (max-width: 767px) {
   p {
     line-height: 150%;
@@ -197,7 +189,6 @@ p {
   letter-spacing: normal;
   color: #095f71;
 }
-
 @media all and (max-width: 1023px) {
   .text {
     font-size: 0.8rem;
@@ -213,7 +204,6 @@ p {
 .desktop {
   display: block;
 }
-
 @media all and (max-width: 767px) {
   .desktop {
     display: none;
@@ -223,7 +213,6 @@ p {
 .mobile {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .mobile {
     display: block;
@@ -233,7 +222,6 @@ p {
 .hide-sm {
   display: block;
 }
-
 @media all and (max-width: 767px) {
   .hide-sm {
     display: none;
@@ -241,34 +229,24 @@ p {
 }
 
 .socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .socials__item {
   margin-left: 0.9rem;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 @media all and (max-width: 767px) {
   .socials__item {
     margin-left: 0;
   }
 }
-
 .socials__item:first-child {
   margin-left: 0rem;
 }
-
 .socials__item:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-  -webkit-transition: 0.3s;
+  transform: scale(1.08);
   transition: 0.3s;
 }
-
 .socials__link:before {
   display: block;
   content: " ";
@@ -276,35 +254,27 @@ p {
   height: 2rem;
   width: 2rem;
 }
-
 .socials__link--facebook::before {
   background-image: url("../img/facebook.svg");
 }
-
 .socials__link--youtube::before {
   background-image: url("../img/youtube.svg");
 }
-
 .socials__link--inst::before {
   background-image: url("../img/instagram.svg");
 }
-
 .socials__link--twitter::before {
   background-image: url("../img/twitter.svg");
 }
-
 .socials__link--google-plus::before {
   background-image: url("../img/g-plus.svg");
 }
-
 .socials__link--telegram-color::before {
   background-image: url("../img/telegram-color.svg");
 }
-
 .socials__link--whatsup-color::before {
   background-image: url("../img/whatsup-color.svg");
 }
-
 .socials__link--viber-color::before {
   background-image: url("../img/viber-color.svg");
 }
@@ -322,53 +292,36 @@ p {
 
 .btn {
   height: 42px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  align-items: center;
+  justify-content: center;
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   color: #ffffff;
   font-weight: 600;
   font-size: 1rem;
   line-height: 115%;
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
   position: relative;
   cursor: pointer;
   padding: 12px 5px;
 }
-
 .btn--orange {
-  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
   background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
 }
-
 .btn:hover {
-  -webkit-box-shadow: 0px 0px 10px #EC3737;
-          box-shadow: 0px 0px 10px #EC3737;
-  -webkit-transition: 0.3s all;
+  box-shadow: 0px 0px 10px #EC3737;
   transition: 0.3s all;
 }
-
 .btn:active, .btn:focus {
-  -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
-          box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
 }
-
 @media all and (max-width: 1023px) {
   .btn {
     height: 38px;
     font-size: 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .btn {
     font-size: 0.75rem;
@@ -380,61 +333,44 @@ p {
 .btn-link {
   font-family: "Manrope", sans-serif;
   height: 73px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: #f0f8f7;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   color: #095f71;
   font-weight: 600;
   font-size: 1.125rem;
   line-height: 115%;
   padding: 0 35px 0 15px;
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
   position: relative;
 }
-
 .btn-link--orange {
-  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
   background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-  -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
-          filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
 }
-
 .btn-link:hover {
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
-  -webkit-box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
-          box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
+  box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
 }
-
 .btn-link::after {
   content: "";
   position: absolute;
   right: 1rem;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   display: block;
   width: 1.125rem;
   height: 1.125rem;
   background: url("../img/customs/chevron-right.svg") center/contain no-repeat;
 }
-
 @media all and (max-width: 1023px) {
   .btn-link::after {
     right: 0.5rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .btn-link {
     font-size: 0.8rem;
@@ -447,7 +383,6 @@ p {
 .img-sm {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .img-sm {
     display: block;
@@ -461,16 +396,13 @@ p {
   --bkg-color: #0a7991;
   --anchor-color: #f0f8f7;
 }
-
 .dark-theme .slick-dots li {
   background: #0a7991;
   border: 1px solid #f0f8f7;
 }
-
 .dark-theme .slick-dots .slick-active {
   background: #f0f8f7;
 }
-
 .dark-theme .slick-prev:before,
 .dark-theme .slick-next:before {
   background-image: url("../img/customs/arrow-right-white.svg");
@@ -482,16 +414,13 @@ p {
   --bkg-color-lb: #f0f8f7;
   --anchor-color: #0a7991;
 }
-
 .light-theme .slick-dots li {
   background: #f0f8f7;
   border: 1px solid #0a7991;
 }
-
 .light-theme .slick-dots .slick-active {
   background: #0a7991;
 }
-
 .light-theme .slick-prev:before,
 .light-theme .slick-next:before {
   background-image: url("../img/arrow-right.svg");
@@ -500,109 +429,84 @@ p {
 .articles {
   padding: 3rem 0;
 }
-
 @media all and (max-width: 767px) {
   .articles {
     padding: 1.5rem 0;
   }
 }
-
 .articles.light-theme {
   background: var(--bkg-color-lb);
   color: var(--text-color);
 }
-
 .articles.light-theme .articles__item {
   color: #454040;
 }
-
 .articles.light-theme .articles__link {
   color: var(--text-color);
   border-bottom: 1px solid #0a7991;
 }
-
 .articles.dark-theme {
   background: var(--bkg-color);
   color: var(--text-color);
 }
-
 .articles.dark-theme .articles__item {
   color: var(--anchor-color);
 }
-
 .articles.dark-theme .articles__link {
   border-bottom: 1px solid #f0f8f7;
   color: var(--anchor-color);
 }
-
 .articles__title {
   font-size: 2.5rem;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
   margin-bottom: 2.75rem;
 }
-
 @media all and (max-width: 1023px) {
   .articles__title {
     font-size: 2rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .articles__title {
     font-size: 1.2rem;
     margin-bottom: 1rem;
   }
 }
-
 .articles__items {
   max-width: 980px;
   margin: 0 auto;
 }
-
 .articles__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .articles__item:not(:last-child) {
   margin-bottom: 35px;
 }
-
 @media all and (max-width: 767px) {
   .articles__item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
-
 @media all and (max-width: 767px) {
   .articles__item {
     display: block;
   }
 }
-
 .articles__item-img {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 38.776%;
-          flex: 0 0 38.776%;
+  flex: 0 0 38.776%;
   margin-right: 20px;
   max-height: 195px;
-  -webkit-filter: drop-shadow(1px 1px 15px rgba(0, 0, 0, 0.4));
-          filter: drop-shadow(1px 1px 15px rgba(0, 0, 0, 0.4));
+  filter: drop-shadow(1px 1px 15px rgba(0, 0, 0, 0.4));
   overflow: hidden;
 }
-
 .articles__item-img img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media all and (max-width: 767px) {
   .articles__item-img {
     max-height: 148px;
@@ -610,7 +514,6 @@ p {
     margin-bottom: 20px;
   }
 }
-
 .articles__item-title {
   font-family: "Manrope", sans-serif;
   font-weight: 600;
@@ -618,25 +521,109 @@ p {
   line-height: 30px;
   margin-bottom: 1rem;
 }
-
 @media all and (max-width: 767px) {
   .articles__item-title {
     font-size: 15px;
     line-height: 20px;
   }
 }
-
 .articles__item-text {
   font-family: "Manrope", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
 }
-
 @media all and (max-width: 767px) {
   .articles__item-text {
     font-size: 0.875rem;
     line-height: 190%;
   }
 }
-/*# sourceMappingURL=articles.css.map */
+
+.pagination {
+  padding: 0.5rem 0 6rem;
+}
+.pagination.light-theme {
+  background: var(--bkg-color-lb);
+  color: var(--text-color);
+}
+.pagination.light-theme .pagination__btn {
+  background: var(--text-color);
+  color: var(--bkg-color-w);
+}
+.pagination.light-theme .pagination__num {
+  color: var(--text-color);
+  border: 1px solid #0A7991;
+}
+.pagination.light-theme .pagination__btn:hover {
+  filter: drop-shadow(0px 0px 5px grey);
+  transition: 0.3s;
+}
+.pagination.light-theme .pagination__btn:active {
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.4);
+}
+.pagination.light-theme .pagination__num:active {
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.4);
+}
+.pagination.light-theme .pagination__num:hover {
+  filter: drop-shadow(0px 0px 2px grey);
+  transition: 0.3s;
+}
+.pagination.dark-theme {
+  background: var(--bkg-color);
+  color: var(--text-color);
+}
+.pagination.dark-theme .pagination__btn {
+  background: var(--text-color);
+  color: var(--bkg-color);
+}
+.pagination.dark-theme .pagination__num {
+  color: var(--bkg-color-w);
+  border: 1px solid #fff;
+}
+.pagination.dark-theme .pagination__btn:hover {
+  filter: drop-shadow(0px 0px 5px #fafafa);
+}
+.pagination.dark-theme .pagination__btn:active {
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.4);
+}
+.pagination.dark-theme .pagination__num:hover {
+  filter: drop-shadow(0px 0px 5px #fafafa);
+}
+.pagination.dark-theme .pagination__num:active {
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.4);
+}
+.pagination ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.pagination ul li {
+  margin: 0 2.5px;
+}
+.pagination__btn {
+  font-family: "Manrope", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 3px;
+  padding: 0 12px;
+  min-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+.pagination__num {
+  height: 24px;
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  transition: 0.3s;
+}/*# sourceMappingURL=articles.css.map */
