--- a/css/hero.css
+++ b/css/hero.css
@@ -8,7 +8,6 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -37,6 +36,11 @@ body {
   font-size: 16px;
 }
 
+body,
+html {
+  min-height: 100%;
+}
+
 main {
   padding-top: 5.25rem;
 }
@@ -50,11 +54,9 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-
 body.lock {
   overflow: hidden;
 }
-
 @media (max-width: 767.98px) {
   body.lock {
     width: 100%;
@@ -76,9 +78,9 @@ input::-ms-clear {
   display: none;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="tel"],
+input[type=text],
+input[type=email],
+input[type=tel],
 textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -148,22 +150,18 @@ h6 {
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
 @media (max-width: 1212px) {
   .container {
     max-width: 970px;
   }
 }
-
 @media (max-width: 992.98px) {
   .container {
     max-width: 750px;
   }
 }
-
 @media (max-width: 767.98px) {
   .container {
     max-width: none;
@@ -178,7 +176,6 @@ p {
   font-weight: 300;
   letter-spacing: 0.03rem;
 }
-
 @media all and (max-width: 767px) {
   p {
     line-height: 150%;
@@ -192,7 +189,6 @@ p {
   letter-spacing: normal;
   color: #095f71;
 }
-
 @media all and (max-width: 1023px) {
   .text {
     font-size: 0.8rem;
@@ -208,7 +204,6 @@ p {
 .desktop {
   display: block;
 }
-
 @media all and (max-width: 767px) {
   .desktop {
     display: none;
@@ -218,7 +213,6 @@ p {
 .mobile {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .mobile {
     display: block;
@@ -228,7 +222,6 @@ p {
 .hide-sm {
   display: block;
 }
-
 @media all and (max-width: 767px) {
   .hide-sm {
     display: none;
@@ -236,34 +229,24 @@ p {
 }
 
 .socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .socials__item {
   margin-left: 0.9rem;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 @media all and (max-width: 767px) {
   .socials__item {
     margin-left: 0;
   }
 }
-
 .socials__item:first-child {
   margin-left: 0rem;
 }
-
 .socials__item:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-  -webkit-transition: 0.3s;
+  transform: scale(1.08);
   transition: 0.3s;
 }
-
 .socials__link:before {
   display: block;
   content: " ";
@@ -271,35 +254,27 @@ p {
   height: 2rem;
   width: 2rem;
 }
-
 .socials__link--facebook::before {
   background-image: url("../img/facebook.svg");
 }
-
 .socials__link--youtube::before {
   background-image: url("../img/youtube.svg");
 }
-
 .socials__link--inst::before {
   background-image: url("../img/instagram.svg");
 }
-
 .socials__link--twitter::before {
   background-image: url("../img/twitter.svg");
 }
-
 .socials__link--google-plus::before {
   background-image: url("../img/g-plus.svg");
 }
-
 .socials__link--telegram-color::before {
   background-image: url("../img/telegram-color.svg");
 }
-
 .socials__link--whatsup-color::before {
   background-image: url("../img/whatsup-color.svg");
 }
-
 .socials__link--viber-color::before {
   background-image: url("../img/viber-color.svg");
 }
@@ -317,53 +292,36 @@ p {
 
 .btn {
   height: 42px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  align-items: center;
+  justify-content: center;
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   color: #ffffff;
   font-weight: 600;
   font-size: 1rem;
   line-height: 115%;
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
   position: relative;
   cursor: pointer;
   padding: 12px 5px;
 }
-
 .btn--orange {
-  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
   background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
 }
-
 .btn:hover {
-  -webkit-filter: drop-shadow(0px 0px 10px #EC3737);
-          filter: drop-shadow(0px 0px 10px #EC3737);
-  -webkit-transition: 0.3s all;
+  box-shadow: 0px 0px 10px #EC3737;
   transition: 0.3s all;
 }
-
 .btn:active, .btn:focus {
-  -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
-          box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
 }
-
 @media all and (max-width: 1023px) {
   .btn {
     height: 38px;
     font-size: 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .btn {
     font-size: 0.75rem;
@@ -373,62 +331,46 @@ p {
 }
 
 .btn-link {
+  font-family: "Manrope", sans-serif;
   height: 73px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: #f0f8f7;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   color: #095f71;
   font-weight: 600;
   font-size: 1.125rem;
   line-height: 115%;
   padding: 0 35px 0 15px;
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
   position: relative;
 }
-
 .btn-link--orange {
-  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
   background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-  -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
-          filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+  filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.25));
 }
-
 .btn-link:hover {
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
-  -webkit-box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
-          box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
+  box-shadow: 3px 3px 30px rgba(10, 121, 145, 0.3);
 }
-
 .btn-link::after {
   content: "";
   position: absolute;
   right: 1rem;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   display: block;
   width: 1.125rem;
   height: 1.125rem;
   background: url("../img/customs/chevron-right.svg") center/contain no-repeat;
 }
-
 @media all and (max-width: 1023px) {
   .btn-link::after {
     right: 0.5rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .btn-link {
     font-size: 0.8rem;
@@ -441,7 +383,6 @@ p {
 .img-sm {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .img-sm {
     display: block;
@@ -457,20 +398,17 @@ p {
   margin-top: 5.25rem;
   overflow: hidden;
 }
-
 @media all and (max-width: 767px) {
   .hero {
     background: #095f71;
   }
 }
-
 .hero__main-wrap {
   position: relative;
   z-index: 2;
 }
-
 .hero__main-wrap::after {
-  content: '';
+  content: "";
   display: block;
   background: #0a7991;
   opacity: 0.4;
@@ -481,38 +419,32 @@ p {
   left: -100%;
   z-index: 1;
 }
-
 .hero__text-wrap {
   padding: 7rem 0 7rem;
   max-width: 40rem;
 }
-
 @media all and (max-width: 1699px) {
   .hero__text-wrap {
     padding: 3.5rem 0 3rem;
     max-width: 42rem;
   }
 }
-
 @media all and (max-width: 1280px) {
   .hero__text-wrap {
     padding: 2rem 0 2rem;
     max-width: 40rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .hero__text-wrap {
     padding: 1rem 0;
   }
 }
-
 @media all and (max-width: 767px) {
   .hero__text-wrap {
     padding: 2rem 0 6rem;
   }
 }
-
 .hero__title {
   font-size: 3rem;
   color: #fff;
@@ -521,27 +453,23 @@ p {
   margin-bottom: 1.875rem;
   text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.4);
 }
-
 @media all and (max-width: 1699px) {
   .hero__title {
     font-size: 2.8rem;
     margin-bottom: 1.5rem;
   }
 }
-
 @media all and (max-width: 1280px) {
   .hero__title {
     font-size: 2rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .hero__title {
     font-size: 1.5rem;
     margin-bottom: 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .hero__title {
     font-size: 1.625rem;
@@ -549,7 +477,6 @@ p {
     max-width: 18rem;
   }
 }
-
 .hero__text {
   font-size: 1.125rem;
   color: #f0f8f7;
@@ -558,19 +485,16 @@ p {
   line-height: 156%;
   text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.4);
 }
-
 @media all and (max-width: 1699px) {
   .hero__text {
     font-size: 1.125rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .hero__text {
     font-size: 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .hero__text {
     font-size: 0.75rem;
@@ -579,33 +503,26 @@ p {
     line-height: 200%;
   }
 }
-
 .hero__from {
   background: #f0f8f7;
   padding: 7px 10px;
   max-width: 12rem;
 }
-
 .hero__btn {
   padding: 0.8rem 1rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(#f96b30), to(#d51b1b));
   background: linear-gradient(180deg, #f96b30 0%, #d51b1b 100%);
   font-size: 1.125rem;
   color: #f0f8f7;
   font-weight: 500;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-transition: 0.2s;
+  box-sizing: border-box;
   transition: 0.2s;
 }
-
 @media all and (max-width: 1023px) {
   .hero__btn {
     font-size: 1rem;
     padding: 0.6rem 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .hero__btn {
     margin: 0 auto;
@@ -615,21 +532,14 @@ p {
     padding: 0.8rem 1rem;
   }
 }
-
 .hero__btn:hover {
-  -webkit-filter: drop-shadow(0px 0px 10px #EC3737);
-          filter: drop-shadow(0px 0px 10px #EC3737);
-  -webkit-transition: 0.2s;
+  filter: drop-shadow(0px 0px 10px #EC3737);
   transition: 0.2s;
 }
-
 .hero__btn:active {
-  -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
-          box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
-  -webkit-transition: 0.2s;
+  box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
   transition: 0.2s;
 }
-
 .hero__info-block {
   height: auto;
   max-width: 36rem;
@@ -639,14 +549,12 @@ p {
   margin: 1.25rem 0 7rem 6.25rem;
   z-index: 3;
 }
-
 @media all and (max-width: 1699px) {
   .hero__info-block {
     padding: 2rem 1.5rem 2rem 2rem;
     margin: 1rem 0 6rem 6.25rem;
   }
 }
-
 @media all and (max-width: 1280px) {
   .hero__info-block {
     margin: 0;
@@ -654,23 +562,19 @@ p {
     max-width: 34rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .hero__info-block {
     margin: 0.5rem 0 1rem 0rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .hero__info-block {
     display: none;
   }
 }
-
 .hero__info-block-mob {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .hero__info-block-mob {
     display: block;
@@ -680,11 +584,9 @@ p {
     z-index: 3;
   }
 }
-
 .hero__mob-content {
   display: none;
 }
-
 @media all and (max-width: 767px) {
   .hero__mob-content {
     display: block;
@@ -693,99 +595,81 @@ p {
     z-index: 3;
   }
 }
-
 .hero__info-title {
   font-size: 1.875rem;
   font-weight: 600;
 }
-
 @media all and (max-width: 1280px) {
   .hero__info-title {
     font-size: 1.5rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .hero__info-title {
     font-size: 1rem;
   }
 }
-
 @media all and (max-width: 767px) {
   .hero__info-title {
     font-size: 1.25rem;
     margin-top: 1.5rem;
   }
 }
-
 .hero__info-text {
   margin: 1.75rem 0 2rem;
   font-size: 1.125rem;
 }
-
 @media all and (max-width: 1280px) {
   .hero__info-text {
     font-size: 1rem;
     margin-top: 1rem;
   }
 }
-
 @media all and (max-width: 1023px) {
   .hero__info-text {
     font-size: 0.82rem;
     margin: 1rem 0;
   }
 }
-
 @media all and (max-width: 767px) {
   .hero__info-text {
     font-size: 0.875rem;
     margin-top: 1rem;
   }
 }
-
 .hero__img-wrapper {
   position: absolute;
   top: 0%;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   height: auto;
   width: 100%;
   background: #095f71;
 }
-
 @media all and (max-width: 1699px) {
   .hero__img-wrapper {
     height: 100%;
     width: auto;
   }
 }
-
 .hero__img {
   position: absolute;
   top: 0%;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 100%;
   height: auto;
   display: block;
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
   opacity: 0;
 }
-
 @media all and (max-width: 1699px) {
   .hero__img {
     height: 100%;
     width: auto;
   }
 }
-
 .hero__img.img-show {
   opacity: 1;
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
-}
-/*# sourceMappingURL=hero.css.map */
+}/*# sourceMappingURL=hero.css.map */
